--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "wstiendaveh",
   "version": "1.0.0",
-  "description": "",
+  "description": "No olvides construirlal tabla:",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
